<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="label_camera_change,label_camera_idle" />

    <TextView
        android:id="@+id/label_camera_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_camera_change"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/camera_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_camera_idle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_camera_idle"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_camera_change" />

    <TextView
        android:id="@+id/camera_idle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier_label"
        app:layout_constraintTop_toBottomOf="@+id/camera_change" />

    <CheckedTextView
        android:id="@+id/toggle_camera_idle_pending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:checked="false"
        android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
        android:gravity="center_vertical"
        android:text="@string/camera_idle_pending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_idle" />

    <FrameLayout
        android:id="@+id/map_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_camera_idle_pending" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/content_description_center_marker"
        android:src="@drawable/navermap_default_marker_icon_blue"
        app:layout_constraintBottom_toBottomOf="@+id/crosshair"
        app:layout_constraintEnd_toEndOf="@+id/map_fragment"
        app:layout_constraintStart_toStartOf="@+id/map_fragment" />

    <ImageView
        android:id="@+id/crosshair"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:contentDescription="@string/content_description_center_crosshair"
        android:src="@drawable/crosshair"
        app:layout_constraintBottom_toBottomOf="@+id/map_fragment"
        app:layout_constraintEnd_toEndOf="@+id/map_fragment"
        app:layout_constraintStart_toStartOf="@+id/map_fragment"
        app:layout_constraintTop_toTopOf="@+id/map_fragment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/content_description_move_camera"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
